--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,3 +10,13 @@ jobs:
         uses: xu-cheng/latex-action@master
         with:
           root_file: main.tex
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
