--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -16,6 +16,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          allow_duplicate: true
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
