--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           allow_duplicate: true
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: Release ${{ github..event.head_commit.message }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
