--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -17,8 +17,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           allow_duplicate: true
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.event.head_commit.message }}
+          tag_name: test
+          release_name: ${{ github.event.head_commit.message }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
