--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           allow_duplicate: true
-          automatic_release_tag: "latest"
+          tag_name: ${{ github.ref }}
           release_name: ${{ github.event.head_commit.message }}
           draft: false
           prerelease: false
